--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,7 +8,8 @@
     "start": "node server.js",
     "dev": "SET NODE_ENV=DEVELOPMENT& nodemon Backend/server",
     "prod": "SET NODE_ENV=PRODUCTION& nodemon Backend/server",
-    "seeder": "node utils/seeder.js"
+    "seeder": "node utils/seeder.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false&&npm install --prefix frontend && npm run build --prefix frontend"
   },
   "author": "rishabh and anjali",
   "license": "ISC",
