--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "heroku",
   "version": "1.0.0",
+  
   "description": "full ecommerce site using mern",
   "main": "server.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
