--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "SET NODE_ENV=DEVELOPMENT& nodemon Backend/server",
-    "prod": "SET NODE_ENV=PRODUCTION& nodemon Backend/server",
+    "dev": "SET NODE_ENV=DEVELOPMENT& nodemon /Backend/server",
+    "prod": "SET NODE_ENV=PRODUCTION& nodemon /Backend/server",
     "seeder": "node backend/utils/seeder.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION = false && npm install --prefix frontend && npm run build --prefix frontend"
-  },
+    "heroku-postbuild" : "NPM_CONFIG_PRODUCTION=false && npm install --prefix frontend && npm run build --prefix frontend"  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/anjali-dehru-au13/LetsShop.git"
