--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "node Backend/server.js",
     "dev": "SET NODE_ENV=DEVELOPMENT& nodemon /Backend/server",
     "prod": "SET NODE_ENV=PRODUCTION& nodemon /Backend/server",
     "seeder": "node backend/utils/seeder.js",
